--- a/src/App.css
+++ b/src/App.css
@@ -17,9 +17,38 @@ a {
   padding: 8px 0;
 }
 
+.options {
+  width: 100%;
+  background-color: #fff;
+  border: 1px solid #cfd4dc;
+  border-radius: 15px;
+  padding: 10px;
+}
+
+select {
+  font-size: 14px;
+  border: none;
+  width: 100%;
+  padding: 10px;
+  background: white;
+  border: 1px solid #cfd4dc;
+  border-radius: 15px;
+}
+
+.text-red {
+  color: #ff0000;
+}
+
 .container {
-  max-width: 100%;
-  height: 100vh;
+  max-width: 1024px;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   margin: 0 auto;
   padding: 0 15px;
 }
@@ -29,15 +58,28 @@ a {
 }
 
 .container .main-content {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: auto auto auto;
-      grid-template-columns: auto auto auto;
-  grid-gap: 15px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.container .bottom-content {
+  width: 100%;
+  height: auto;
+  overflow-y: scroll;
+  margin-top: 10px;
 }
 
 .form-input {
-  width: 330px;
+  max-width: 300px;
   background-color: #f0f0f0;
   border-radius: 15px;
   font-size: 16px;
@@ -98,7 +140,7 @@ a {
           flex-direction: row;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
-          justify-content: start;
+          justify-content: flex-start;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -106,10 +148,11 @@ a {
   color: #636c72;
 }
 
-.form-input form .form-group .form-radio input {
+.form-input form .form-group .form-radio input[type="radio"] {
   width: 20px;
   height: 20px;
   margin: 5px;
+  background: #636c72;
 }
 
 .form-input form .form-group .form-radio label {
@@ -210,7 +253,7 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 590px;
+  max-width: 400px;
   height: 504px;
   padding: 10px;
   border: 1px solid #cfd4dc;
@@ -225,6 +268,7 @@ a {
 }
 
 .category-wrapper .stats-wrapper {
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -240,21 +284,30 @@ a {
 }
 
 .category-wrapper .stats-wrapper .stats-item {
+  width: 100px;
+  padding: 8px 12px;
+}
+
+.category-wrapper .stats-wrapper .stats-item .stats-item-content {
   border-right: #dbdbdb 1px solid;
-  width: 140px;
-  padding: 12px 12px;
 }
 
-.category-wrapper .stats-wrapper .stats-item span {
-  font-size: 15px;
+.category-wrapper .stats-wrapper .stats-item .stats-item-content span {
+  font-size: 10px;
+  color: #636c72;
+  padding-left: 5px;
+}
+
+.category-wrapper .stats-wrapper .stats-item .stats-item-content h4 {
+  font-size: 20px;
   color: #333;
   padding-left: 10px;
 }
 
-.category-wrapper .stats-wrapper .stats-item h4 {
-  font-size: 24px;
-  color: #333;
-  padding-left: 10px;
+.category-wrapper .chart-wrapper {
+  width: 100%;
+  height: 100%;
+  margin: 10px auto;
 }
 
 .availability-wrapper {
@@ -265,19 +318,17 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 300px;
+  width: 280px;
   height: 504px;
   padding: 10px;
   border: 1px solid #cfd4dc;
   border-radius: 15px;
 }
 
-.bottom-content {
+.availability-wrapper .stats-wrapper {
   width: 100%;
-  padding: 20px 0;
-}
-
-.bottom-content .table-content {
+  height: 80%;
+  margin-top: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -285,81 +336,152 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 100%;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 16px;
 }
 
-.bottom-content .table-content .table-header {
-  width: 100%;
-  padding: 10px 0;
-}
-
-.bottom-content .table-content .table-header .table-header-item {
-  width: 100%;
+.availability-wrapper .stats-wrapper .chart-labels {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  font-size: 16px;
-  color: #333;
-  padding-left: 10px;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
-.bottom-content .table-content .table-header .table-header-item span {
-  font-size: 16px;
+.availability-wrapper .stats-wrapper .chart-labels span {
+  width: 20px;
+  height: 20px;
+  margin: auto 10px;
+  border-radius: 5px;
+}
+
+.availability-wrapper .stats-wrapper .chart-labels .available {
+  background-color: #295757;
+}
+
+.availability-wrapper .stats-wrapper .chart-labels .full {
+  background-color: #e74c3c;
+}
+
+.availability-wrapper .stats-wrapper .chart-labels p {
+  margin-right: 20px;
+  font-size: 14px;
   color: #636c72;
-  padding-right: 150px;
-  padding-left: 20px;
 }
 
-.bottom-content .table-content .table-header .table-header-item input {
+.table-content {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 300px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+}
+
+.table-content table {
+  border-collapse: separate;
+  border-spacing: 0 10px;
+  margin-top: -10px;
+  /* correct offset on first border spacing if desired */
+  overflow: scroll;
+}
+
+.table-content table input[type="checkbox"] {
+  display: block;
   width: 18px;
   height: 18px;
-  padding-top: 10px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  margin: 0 auto;
 }
 
-.bottom-content .table-content .table-header .table-body-item {
-  width: 100%;
+.table-content th {
+  font-size: 14px;
+  color: #636c72;
+  padding: 10px;
+  font-weight: 100;
+}
+
+.table-content td {
+  border: solid 1px #cfd4dc;
+  border-style: solid none;
+  padding: 20px;
+  text-align: center;
+}
+
+.table-content td:first-child {
+  border-left-style: solid;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+.table-content td:last-child {
+  border-right-style: solid;
+  border-bottom-right-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.table-content .options-popup {
+  max-width: 500px;
+  height: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  font-size: 16px;
-  color: #333;
-  padding: 24px 10px;
-  border: #f0f0f0 1px solid;
-  border-radius: 12px;
-  margin: 20px 0;
+  position: fixed;
+  top: 86%;
+  right: 35%;
+  border: #cfd4dc 1px solid;
+  border-radius: 15px;
+  background-color: #fff;
+  width: 50%;
+  padding: 10px 10px;
+  z-index: 100;
 }
 
-.bottom-content .table-content .table-header .table-body-item span {
-  font-size: 16px;
-  color: #636c72;
-  padding-right: 150px;
-  padding-left: 20px;
+.table-content .options-popup button {
+  width: 120px;
+  font-size: 12px;
+  margin: 0 10px;
+  padding: 0 10px;
+  border-radius: 10px;
+  background-color: #ee5c5c;
+  color: #fff;
+  outline: none;
+  border: none;
+  cursor: pointer;
 }
 
-.bottom-content .table-content .table-header .table-body-item input {
-  width: 18px;
-  height: 18px;
+.table-content .options-popup .arrive {
+  background-color: #295757;
+  color: #fff;
+  font-weight: 500;
+}
+
+.table-content .options-popup span {
+  font-size: 14px;
   color: #636c72;
-  padding-top: 10px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  margin: auto;
+}
+
+.table-content .options-popup p {
+  font-size: 25px;
+  color: #636c72;
+  margin: 0 10px;
+  cursor: pointer;
 }
 /*# sourceMappingURL=app.css.map */
