--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@ $form_text_color: #333;
 $poppins: "Poppins", sans-serif;
 $border_color: #cfd4dc;
 $placeholder_color: #636c72;
+$error_mg: #ff0000;
 
 * {
   margin: 0;
@@ -23,24 +24,54 @@ a {
   cursor: pointer;
   padding: 8px 0;
 }
+.options {
+  width: 100%;
+  background-color: $white_color;
+  border: 1px solid $border_color;
+  border-radius: 15px;
+  padding: 10px;
+}
+
+select {
+  font-size: 14px;
+  border: none;
+  width: 100%;
+  padding: 10px;
+  background: white;
+  border: 1px solid $border_color;
+  border-radius: 15px;
+}
+
+.text-red {
+  color: $error_mg;
+}
 
 .container {
-  max-width: 100%;
-  height: 100vh;
+  max-width: 1024px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
   margin: 0 auto;
   padding: 0 15px;
   .title-head {
     padding: 20px 0;
   }
   .main-content {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-gap: 15px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .bottom-content {
+    width: 100%;
+    height: auto;
+    overflow-y: scroll;
+    margin-top: 10px;
   }
 }
 
 .form-input {
-  width: 330px;
+  max-width: 300px;
   background-color: $gray_color;
   border-radius: 15px;
   font-size: 16px;
@@ -76,14 +107,15 @@ a {
         height: 44px;
         display: flex;
         flex-direction: row;
-        justify-content: start;
+        justify-content: flex-start;
         align-items: center;
         text-align: start;
         color: #636c72;
-        input {
+        input[type="radio"] {
           width: 20px;
           height: 20px;
           margin: 5px;
+          background: #636c72;
         }
         label {
           padding: 0px 40px 0px 10px;
@@ -152,7 +184,7 @@ a {
 .category-wrapper {
   display: flex;
   flex-direction: column;
-  width: 590px;
+  max-width: 400px;
   height: 504px;
   padding: 10px;
   border: 1px solid $border_color;
@@ -165,95 +197,161 @@ a {
   }
 
   .stats-wrapper {
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
     background-color: $gray_color;
     border-radius: 16px;
     .stats-item {
-      border-right: #dbdbdb 1px solid;
-      width: 140px;
-      padding: 12px 12px;
-      span {
-        font-size: 15px;
-        color: $form_text_color;
-        padding-left: 10px;
-      }
-      h4 {
-        font-size: 24px;
-        color: $form_text_color;
-        padding-left: 10px;
+      width: 100px;
+      padding: 8px 12px;
+      .stats-item-content {
+        border-right: #dbdbdb 1px solid;
+        span {
+          font-size: 10px;
+          color: $placeholder_color;
+          padding-left: 5px;
+        }
+        h4 {
+          font-size: 20px;
+          color: $form_text_color;
+          padding-left: 10px;
+        }
       }
     }
+  }
+
+  .chart-wrapper {
+    width: 100%;
+    height: 100%;
+    margin: 10px auto;
   }
 }
 
 .availability-wrapper {
   display: flex;
   flex-direction: column;
-  width: 300px;
+  width: 280px;
   height: 504px;
   padding: 10px;
   border: 1px solid $border_color;
   border-radius: 15px;
-}
-
-.bottom-content {
-  width: 100%;
-  padding: 20px 0;
-  .table-content {
+  .stats-wrapper {
+    width: 100%;
+    height: 80%;
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
-    width: 100%;
-    .table-header {
-      width: 100%;
-      padding: 10px 0;
-      .table-header-item {
-        width: 100%;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        font-size: 16px;
-        color: $form_text_color;
-        padding-left: 10px;
-        span {
-          font-size: 16px;
-          color: $placeholder_color;
-          padding-right: 150px;
-          padding-left: 20px;
-        }
-        input {
-          width: 18px;
-          height: 18px;
-          padding-top: 10px;
-          justify-content: center;
-        }
+    justify-content: space-evenly;
+    align-items: center;
+    border-radius: 16px;
+    .chart-labels {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      span {
+        width: 20px;
+        height: 20px;
+        margin: auto 10px;
+        border-radius: 5px;
       }
-      .table-body-item {
-        width: 100%;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        font-size: 16px;
-        color: $form_text_color;
-        padding: 24px 10px;
-        border: $gray_color 1px solid;
-        border-radius: 12px;
-        margin: 20px 0;
-        span {
-          font-size: 16px;
-          color: $placeholder_color;
-          padding-right: 150px;
-          padding-left: 20px;
-        }
-        input {
-          width: 18px;
-          height: 18px;
-          color: $placeholder_color;
-          padding-top: 10px;
-          justify-content: center;
-        }
+      .available {
+        background-color: #295757;
       }
+      .full {
+        background-color: #e74c3c;
+      }
+      p {
+        margin-right: 20px;
+        font-size: 14px;
+        color: $placeholder_color;
+      }
+    }
+  }
+}
+
+.table-content {
+  position: relative;
+  display: flex;
+  height: 300px;
+  flex-direction: column;
+  width: 100%;
+  table {
+    border-collapse: separate;
+    border-spacing: 0 10px;
+    margin-top: -10px; /* correct offset on first border spacing if desired */
+    overflow: scroll;
+    input[type="checkbox"] {
+      display: block;
+      width: 18px;
+      height: 18px;
+      margin: 0 auto;
+    }
+  }
+  th {
+    font-size: 14px;
+    color: $placeholder_color;
+    padding: 10px;
+    font-weight: 100;
+  }
+  td {
+    border: solid 1px $border_color;
+    border-style: solid none;
+    padding: 20px;
+    text-align: center;
+  }
+  td:first-child {
+    border-left-style: solid;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+  }
+  td:last-child {
+    border-right-style: solid;
+    border-bottom-right-radius: 10px;
+    border-top-right-radius: 10px;
+  }
+  .options-popup {
+    max-width: 500px;
+    height: 60px;
+    display: flex;
+    flex-direction: row;
+    position: fixed;
+    top: 86%;
+    right: 35%;
+    border: $border_color 1px solid;
+    border-radius: 15px;
+    background-color: $white_color;
+    width: 50%;
+    padding: 10px 10px;
+    z-index: 100;
+    button {
+      width: 120px;
+      font-size: 12px;
+      margin: 0 10px;
+      padding: 0 10px;
+      border-radius: 10px;
+      background-color: #ee5c5c;
+      color: $white_color;
+      outline: none;
+      border: none;
+      cursor: pointer;
+    }
+    .arrive {
+      background-color: #295757;
+      color: $white_color;
+      font-weight: 500;
+    }
+    span {
+      font-size: 14px;
+      color: $placeholder_color;
+      margin: auto;
+    }
+    p {
+      font-size: 25px;
+      color: $placeholder_color;
+      margin: 0 10px;
+      cursor: pointer;
     }
   }
 }
