update several changes

--- a/src/App.scss
+++ b/src/App.scss
@@ -261,7 +261,7 @@ select {
         background-color: $primary_color;
       }
       .full {
-        background-color: #e74c3c;
+        background-color: #ef6d3f;
       }
       p {
         margin-right: 20px;
